--- a/Week02-Ex01/Ex01.ipynb
+++ b/Week02-Ex01/Ex01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 1: Identity Matrix"
+    "# Import Libraries"
    ]
   },
   {
@@ -13,7 +13,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1: Identity Matrix"
    ]
   },
   {
@@ -46,16 +55,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import copy"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -111,10 +110,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fc1109c5c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22e9c3b6348>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,18 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_theta(theta, X, y, alpha):\n",
-    "    theta = copy.deepcopy(theta)\n",
     "    m = get_m(X)\n",
-    "    for j in range(theta.shape[0]):\n",
-    "        hx = np.matmul(X, theta)\n",
-    "        hx_y_x = np.multiply(hx - y, X[:, j:j+1])\n",
-    "        theta[j,0] = theta[j,0] - alpha*(1/m)*np.sum(hx_y_x)\n",
-    "    return theta"
+    "    \n",
+    "    hx = np.matmul(X, theta)\n",
+    "    err = hx - y\n",
+    "    return theta - alpha/(2*m)*np.matmul(np.transpose(X), err)"
    ]
   },
   {
@@ -319,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -357,9 +354,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "J: 4.483134519095647\n",
-      "[[-3.63606348]\n",
-      " [ 1.16698916]]\n"
+      "J: 4.573350527480161\n",
+      "[[-2.86779958]\n",
+      " [ 1.08976177]]\n"
      ]
     }
    ],
@@ -385,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -425,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -489,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,6 +505,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha_ex3 = 0.1\n",
+    "iterations_ex3 = 1500"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -515,18 +522,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converge on loop 327\n",
-      "J: 2043280050.6029234\n",
+      "Converge on loop 664\n",
+      "J: 2043280050.6030467\n",
       "[[340412.65957447]\n",
-      " [109447.7823091 ]\n",
-      " [ -6578.34101797]]\n"
+      " [109447.77467348]\n",
+      " [ -6578.333058  ]]\n"
      ]
     }
    ],
    "source": [
-    "alpha_ex3 = 0.1\n",
-    "iterations_ex3 = 1500\n",
-    "\n",
     "theta_ex3 = gradient_descent_calculation(X_ex3_normalized, y_ex3_unnormalized, alpha_ex3, iterations_ex3)\n",
     "print(theta_ex3)"
    ]
@@ -537,18 +541,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "353308.46680205886"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "353308.467598317\n"
+     ]
     }
    ],
    "source": [
-    "theta_ex3[0,0] + theta_ex3[1,0]*X_ex3_normalized[0,1] - theta_ex3[2,0]*X_ex3_normalized[0,2]"
+    "predicted_y1_by_gd = theta_ex3[0,0] + theta_ex3[1,0]*X_ex3_normalized[0,1] - theta_ex3[2,0]*X_ex3_normalized[0,2]\n",
+    "print(predicted_y1_by_gd)"
    ]
   },
   {
@@ -605,18 +607,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "408711.2250128632"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "408711.2250128632\n"
+     ]
     }
    ],
    "source": [
-    "theta_ex3_ne[0,0] + theta_ex3_ne[1,0]*X_ex3_unnormalized[0,1] - theta_ex3_ne[2,0]*X_ex3_unnormalized[0,2]"
+    "predicted_y1_by_ne = theta_ex3_ne[0,0] + theta_ex3_ne[1,0]*X_ex3_unnormalized[0,1] - theta_ex3_ne[2,0]*X_ex3_unnormalized[0,2]\n",
+    "print(predicted_y1_by_ne)"
    ]
   }
  ],
