--- a/Week02-Ex01/Ex01.ipynb
+++ b/Week02-Ex01/Ex01.ipynb
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x22e9c3b6348>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2154aea54c8>"
       ]
      },
      "execution_count": 4,
@@ -326,6 +326,7 @@
     "#     old_j = calculate_j(theta, X, y)\n",
     "    old_j = alt_calculate_j(theta, X, y)\n",
     "    theta = update_theta(theta, X, y, alpha)\n",
+    "    \n",
     "    for i in range(1, iterations):\n",
     "#         j = calculate_j(theta, X, y)\n",
     "        j = alt_calculate_j(theta, X, y)\n",
@@ -430,15 +431,14 @@
     "    matrix = copy.deepcopy(matrix)\n",
     "    mean = np.mean(matrix, axis=0)\n",
     "    std = np.std(matrix, axis=0)\n",
-    "#     print(mean)\n",
-    "#     print(std)\n",
     "    \n",
+    "    # use start_from to check whether the input matrix is X matrix with x0 or not\n",
+    "    # start from index 1 to exclude x0 column\n",
     "    start_from = 0\n",
     "    if has_x0:\n",
     "        start_from = 1\n",
-    "    # start at index 1 to exclude x0\n",
-    "    for i in range(start_from, mean.shape[0]):\n",
-    "        matrix[:,i] = (matrix[:,i] - mean[i]) / std[i]\n",
+    "        \n",
+    "    matrix[:,start_from:] = (matrix[:,start_from:] - mean[start_from:]) / std[start_from:]\n",
     "    \n",
     "    return matrix"
    ]
@@ -549,8 +549,8 @@
     }
    ],
    "source": [
-    "predicted_y1_by_gd = theta_ex3[0,0] + theta_ex3[1,0]*X_ex3_normalized[0,1] - theta_ex3[2,0]*X_ex3_normalized[0,2]\n",
-    "print(predicted_y1_by_gd)"
+    "predicted_y0_by_gd = theta_ex3[0,0] + theta_ex3[1,0]*X_ex3_normalized[0,1] - theta_ex3[2,0]*X_ex3_normalized[0,2]\n",
+    "print(predicted_y0_by_gd)"
    ]
   },
   {
@@ -615,8 +615,8 @@
     }
    ],
    "source": [
-    "predicted_y1_by_ne = theta_ex3_ne[0,0] + theta_ex3_ne[1,0]*X_ex3_unnormalized[0,1] - theta_ex3_ne[2,0]*X_ex3_unnormalized[0,2]\n",
-    "print(predicted_y1_by_ne)"
+    "predicted_y0_by_ne = theta_ex3_ne[0,0] + theta_ex3_ne[1,0]*X_ex3_unnormalized[0,1] - theta_ex3_ne[2,0]*X_ex3_unnormalized[0,2]\n",
+    "print(predicted_y0_by_ne)"
    ]
   }
  ],
